--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -19,21 +19,22 @@ header: header-player
           </tbody>
         </table>
       </div>
-    </div>
-    {% if page.stats %}
-    <div class="text-white bg-dark">
-      <div class="row row-cols-2 row-cols-md-3 g-3">
-        {% for stat in page.stats %}
-        <div class="col card rounded-0">
-          <div class="card-body">
-            <p class="fs-4 text-uppercase text-center mb-0">{{ stat.name }}</p>
-            <p class="fs-1 text-uppercase text-center fw-bolder mb-0">{{ stat.value }}</p>
+      {% if page.stats %}
+      <div class="col text-white bg-dark">
+        <h1 class="text-uppercase mb-0 fs-3">statistics</h1>
+        <div class="row row-cols-2 row-cols-md-3 g-3">
+          {% for stat in page.stats %}
+          <div class="col card text-white bg-dark rounded-0">
+            <div class="card-body">
+              <p class="fs-4 text-uppercase text-center mb-0">{{ stat.name }}</p>
+              <p class="fs-1 text-uppercase text-center fw-bolder mb-0">{{ stat.value }}</p>
+            </div>
           </div>
+          {% endfor %}
         </div>
-        {% endfor %}
       </div>
+      {% endif %}
     </div>
-    {% endif %}
   </div>
 </div>
 
