--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -26,7 +26,7 @@ header: header-player
           {% for stat in page.stats %}
           <div class="col card text-white bg-dark rounded-0">
             <div class="card-body">
-              <p class="fs-4 text-uppercase text-center mb-0">{{ stat.name }}</p>
+              <p class="fs-6 text-uppercase text-center fw-bolder mb-0">{{ stat.name }}</p>
               <p class="fs-1 text-uppercase text-center fw-bolder mb-0">{{ stat.value }}</p>
             </div>
           </div>
