--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -20,16 +20,14 @@ header: header-player
         </table>
       </div>
       {% if page.stats %}
-      <div class="col text-white bg-dark px-3">
+      <div class="col text-white bg-dark">
         <h1 class="text-uppercase mb-0 fs-3 pb-3">statistics</h1>
         <div class="row row-cols-2 row-cols-md-3 g-3">
           {% for stat in page.stats %}
-          <div class="col p-0 m-0">
-            <div class="card h-100 text-white bg-dark border-white rounded-0">
-              <div class="card-body">
-                <p class="fs-6 text-uppercase text-center fw-bolder mb-0">{{ stat.name }}</p>
-                <p class="fs-1 text-uppercase text-center fw-bolder mb-0">{{ stat.value }}</p>
-              </div>
+          <div class="col border-white">
+            <div class="text-center p-3">
+              <p class="fs-6 text-uppercase fw-bolder mb-0">{{ stat.name }}</p>
+              <p class="fs-1 text-uppercase fw-bolder mb-0">{{ stat.value }}</p>
             </div>
           </div>
           {% endfor %}
