--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -22,9 +22,9 @@ header: header-player
       {% if page.stats %}
       <div class="col text-white bg-dark">
         <h1 class="text-uppercase mb-0 fs-3 pb-3">statistics</h1>
-        <div class="row row-cols-2 row-cols-md-3 g-3">
+        <div class="row row-cols-2 row-cols-md-3 g-0">
           {% for stat in page.stats %}
-          <div class="col border border-white p-0">
+          <div class="col border border-white">
             <div class="text-center py-3 px-1">
               <p class="fs-6 text-uppercase fw-bolder mb-0">{{ stat.name }}</p>
               <p class="fs-1 text-uppercase fw-bolder mb-0">{{ stat.value }}</p>
