--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -24,7 +24,7 @@ header: header-player
         <h1 class="text-uppercase mb-0 fs-3 pb-3">statistics</h1>
         <div class="row row-cols-2 row-cols-md-3 g-0">
           {% for stat in page.stats %}
-          <div class="col border border-white">
+          <div class="col border border-light">
             <div class="text-center py-3 px-1">
               <p class="fs-6 text-uppercase fw-bolder mb-0">{{ stat.name }}</p>
               <p class="fs-1 text-uppercase fw-bolder mb-0">{{ stat.value }}</p>
