--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -11,9 +11,9 @@ header: header-player
         <table class="table table-dark">
           <tbody>
             {% for item in page.details %}
-            <tr>
-              <td class="text-uppercase fw-bolder ps-0">{{ item.name }}</td>
-              <td class="text-capitalize">{{ item.value }}</td>
+            <tr class="row g-3">
+              <td class="col-4 text-uppercase fw-bolder ps-0">{{ item.name }}</td>
+              <td class="col-8 text-capitalize">{{ item.value }}</td>
             </tr>
             {% endfor %}
           </tbody>
