--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -32,7 +32,7 @@ header: header-player
           </div>
           {% endfor %}
         </div>
-        <p class="mb-0"><small class="text-secondary">* last update: 21 Juni 2022</small></p>
+        <p class="mb-0 pt-3"><small class="text-center text-secondary">* last update: 21 Juni 2022</small></p>
       </div>
       {% endif %}
     </div>
