--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -3,7 +3,7 @@ layout: default
 header: header-player
 ---
 
-<div class="text-white bg-dark py-5">
+<div class="text-white bg-dark py-5" style="background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.2));">
   <div class="container">
     <div class="row row-cols-1 row-cols-md-2 g-3">
       <div class="col">
@@ -32,7 +32,7 @@ header: header-player
           </div>
           {% endfor %}
         </div>
-        <p class="mb-0 pt-3"><small class="text-center text-secondary">* last update: 21 Juni 2022</small></p>
+        <p class="mb-0 pt-3"><small class="text-center text-secondary">* Last update: 21 Juni 2022</small></p>
       </div>
       {% endif %}
     </div>
