--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -8,7 +8,7 @@ header: header-player
     <div class="row row-cols-1 row-cols-md-2 g-3">
       <div class="col">
         <h1 class="text-uppercase mb-0 fs-3 pb-3">details</h1>
-        <table class="table table-dark bg-transparent">
+        <table class="table bg-transparent">
           <tbody>
             {% for item in page.details %}
             <tr class="row g-3">
