--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -3,12 +3,12 @@ layout: default
 header: header-player
 ---
 
-<div class="text-white bg-dark py-5" style="background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.2));">
+<div class="text-light bg-dark py-5" style="background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.2));">
   <div class="container">
     <div class="row row-cols-1 row-cols-md-2 g-3">
       <div class="col">
         <h1 class="text-uppercase mb-0 fs-3 pb-3">details</h1>
-        <table class="table bg-transparent">
+        <table class="table text-light bg-transparent">
           <tbody>
             {% for item in page.details %}
             <tr class="row g-3">
@@ -20,7 +20,7 @@ header: header-player
         </table>
       </div>
       {% if page.stats %}
-      <div class="col text-white bg-transparent">
+      <div class="col text-light bg-transparent">
         <h1 class="text-uppercase mb-0 fs-3 pb-3">statistics</h1>
         <div class="row row-cols-2 row-cols-md-3 g-0">
           {% for stat in page.stats %}
