--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -11,10 +11,12 @@ header: header-player
         <table class="table text-light bg-transparent">
           <tbody>
             {% for item in page.details %}
-            <tr class="row px-2 g-0">
+            <div class="row g-3">
+            <tr>
               <td class="col-5 text-uppercase fw-bolder">{{ item.name }}</td>
               <td class="col-7 text-capitalize">{{ item.value }}</td>
             </tr>
+            </div>
             {% endfor %}
           </tbody>
         </table>
