--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -11,11 +11,9 @@ header: header-player
         <table class="table text-light bg-transparent">
           <tbody>
             {% for item in page.details %}
-            <tr>
-            <div class="row g-3">
+            <tr class="row">
               <td class="col-5 text-uppercase fw-bolder">{{ item.name }}</td>
               <td class="col-7 text-capitalize">{{ item.value }}</td>
-            </div>
             </tr>
             {% endfor %}
           </tbody>
