--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -11,8 +11,8 @@ header: header-player
         <table class="table text-light bg-transparent">
           <tbody>
             {% for item in page.details %}
-            <tr class="row mx-3">
-              <td class="col-5 text-uppercase fw-bolder">{{ item.name }}</td>
+            <tr class="row mx-2">
+              <td class="col-5 text-uppercase fw-bolder ps-0">{{ item.name }}</td>
               <td class="col-7 text-capitalize">{{ item.value }}</td>
             </tr>
             {% endfor %}
