--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -14,7 +14,7 @@ layout: default
       {% for player in role.items %}
       <div class="col">
         <div class="card h-100 bg-dark border-0 rounded-0 shadow-sm" style="min-height:14rem;">
-          <img src="{% if player.pp %}{{ player.pp }}{% else %}{{ '/assets/img/blank-pp.png' | relative_url }}{% endif %}" class="card-img h-auto border-0 rounded-0" alt="">
+          <img src="{% if player.pp %}{{ player.pp }}{% else %}{{ '/assets/img/blank-pp.png' | relative_url }}{% endif %}" class="card-img img-fluid border-0 rounded-0" alt="">
           <div class="card-img-overlay d-flex flex-column justify-content-between rounded-0" style="background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3));">
             <h2 class="card-text fw-bolder mb-0">{{ player.no-punggung }}</h2>
             <a href="{{ player.profile-link | relative_url }}" class="card-text fs-5 link-light stretched-link text-decoration-none fw-bolder text-uppercase lh-1 mb-0" alt="">{{ player.name }}</a>
