--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -8,7 +8,7 @@ header: header-player
     <div class="row row-cols-1 row-cols-md-2 g-3">
       <div class="col">
         <h1 class="text-uppercase mb-0 fs-3 pb-3">details</h1>
-        <table class="table text-light bg-transparent">
+        <table class="table text-success bg-transparent">
           <tbody>
             {% for item in page.details %}
             <tr class="row mx-1">
@@ -20,7 +20,7 @@ header: header-player
         </table>
       </div>
       {% if page.stats %}
-      <div class="col text-light bg-transparent">
+      <div class="col text-success bg-transparent">
         <h1 class="text-uppercase mb-0 fs-3 pb-3">statistics</h1>
         <div class="row row-cols-2 row-cols-md-3 g-0">
           {% for stat in page.stats %}
