--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -25,4 +25,16 @@ layout: default
       {% endfor %}
     </div>
   </div>
+  <div class="container">
+    {% assign selected-teams = page.teams %}
+    {% assign match = site.matches | where: "teams", selected-teams %}
+    <div class="row">
+      <div class="col">
+        <div class="p-3">
+          <p>Matches Played</p>
+          <p>{{ match.size }}</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
