--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -28,14 +28,14 @@ layout: default
   <div class="container">
     {% assign selected-teams = page.teams %}
     {% assign match = site.matches | where: "teams", selected-teams %}
-    {% assign match-win = match | where: "conclusion", "draw" %}
+    {% assign match-draw = match | where: "conclusion", "draw" %}
     <div class="row">
       <div class="col">
         <div class="p-3">
           <p>Matches Played</p>
           <p>{{ match.size }}</p>
-          <p>Matches Win</p>
-          <p>{{ match-win.size }}</p>
+          <p>Matches Draw</p>
+          <p>{{ match-draw.size }}</p>
         </div>
       </div>
     </div>
