--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -28,14 +28,16 @@ layout: default
   <div class="container">
     {% assign selected-teams = page.teams %}
     {% assign match = site.matches | where: "teams", selected-teams %}
-    {% assign match-draw = match.result.conclusion | where: "conclusion", "draw" %}
     <div class="row">
       <div class="col">
         <div class="p-3">
           <p>Matches Played</p>
           <p>{{ match.size }}</p>
+          {% for results in match.result %}
+          {% assign draw = results | where: "conclusion", "draw" %}
           <p>Matches Draw</p>
-          <p>{{ match-draw.size }}</p>
+          <p>{{ draw.size }}</p>
+          {% endfor %}
         </div>
       </div>
     </div>
