--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -28,15 +28,15 @@ layout: default
   <div class="container">
     {% assign selected-teams = page.teams %}
     {% assign match = site.matches | where: "teams", selected-teams %}
+    {% assign match-win = match.result | where: "conclusion", "win" %}
     <div class="row">
       <div class="col">
         <div class="p-3">
           <p>Matches Played</p>
           <p>{{ match.size }}</p>
-          {% for results in match.result %}
-          {% assign draw = results | where: "conclusion", "draw" %}
-          <p>Matches Draw</p>
-          <p>{{ draw.size }}</p>
+          {% for item in match-win %}
+          <p>Matches Win</p>
+          <p>{{ item.size }}</p>
           {% endfor %}
         </div>
       </div>
