--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -11,7 +11,7 @@ header: header-player
         <table class="table text-light bg-transparent">
           <tbody>
             {% for item in page.details %}
-            <tr class="row mx-1">
+            <tr class="row g-3">
               <td class="col-5 text-uppercase fw-bolder ps-0">{{ item.name }}</td>
               <td class="col-7 text-capitalize">{{ item.value }}</td>
             </tr>
