--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -28,12 +28,12 @@ layout: default
   <div class="container">
     {% assign selected-teams = page.teams %}
     {% assign match = site.matches | where: "teams", selected-teams %}
-    {% assign match-win = match.result.conclusion | where: "conclusion", "win" %}
+    {% assign match-win = match | where: "conclusion", "win" %}
     <div class="row">
       <div class="col">
         <div class="p-3">
           <p>Matches Played</p>
-          <p>{{ match.size }}</p>
+          <p>{{ match-win.size }}</p>
           {% for item in match-win %}
           <p>Matches Win</p>
           <p>{{ item.size }}</p>
