--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -33,7 +33,9 @@ layout: default
       <div class="col">
         <div class="p-3">
           <p>Matches Played</p>
-          <p>{{ match-win.size }}</p>
+          {% for win in match-win %}
+          <p>{{ win.size }}</p>
+          {% endfor %}
         </div>
       </div>
     </div>
