--- a/_includes/header-image.html
+++ b/_includes/header-image.html
@@ -1,4 +1,4 @@
-<header class="text-white bg-dark ratio ratio-4x3" style="min-height: 480px; background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.8)), url('{{ page.image }}'); background-size: cover; background-position: center; background-repeat: no-repeat;"> 
+<header class="text-white bg-dark ratio ratio-4x3" style="min-height: 480px; background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.3)), url('{{ page.image-header }}'); background-size: cover; background-position: center; background-repeat: no-repeat;"> 
   <div style="height: 480px">
     <div class="container h-25 py-3">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between">
