--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -3,7 +3,7 @@ layout: default
 header: header-player
 ---
 
-<div class="text-light bg-dark py-5" style="background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.2));">
+<div class="text-secondary bg-dark py-5" style="background-image: linear-gradient(to bottom right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.2));">
   <div class="container">
     <div class="row row-cols-1 row-cols-md-2 g-3">
       <div class="col">
@@ -11,7 +11,7 @@ header: header-player
         <table class="table text-light bg-transparent">
           <tbody>
             {% for item in page.details %}
-            <tr class="row g-2 px-1">
+            <tr class="row g-2 p-1">
               <td class="col-5 text-uppercase fw-bolder ps-0">{{ item.name }}</td>
               <td class="col-7 text-capitalize">{{ item.value }}</td>
             </tr>
@@ -20,7 +20,7 @@ header: header-player
         </table>
       </div>
       {% if page.stats %}
-      <div class="col text-light bg-transparent">
+      <div class="col text-secondary bg-transparent">
         <h1 class="text-uppercase mb-0 fs-3 pb-3">statistics</h1>
         <div class="row row-cols-2 row-cols-md-3 g-0">
           {% for stat in page.stats %}
