--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -7,7 +7,7 @@ header: header-player
   <div class="container">
     <div class="row row-cols-1 row-cols-md-2 g-3">
       <div class="col">
-        <h1 class="text-uppercase mb-0 fs-3 pb-3">details</h1>
+        <h1 class="text-uppercase fw-bolder mb-0 fs-3 pb-3">details</h1>
         <table class="table text-light border-secondary bg-transparent">
           <tbody>
             {% for item in page.details %}
@@ -21,10 +21,10 @@ header: header-player
       </div>
       {% if page.stats %}
       <div class="col text-light bg-transparent">
-        <h1 class="text-uppercase mb-0 fs-3 pb-3">statistics</h1>
+        <h1 class="text-uppercase fw-bolder mb-0 fs-3 pb-3">statistics</h1>
         <div class="row row-cols-3 row-cols-md-3 g-0">
           {% for stat in page.stats %}
-          <div class="col border border-light">
+          <div class="col border border-secondary">
             <div class="text-center py-3 px-1">
               <p class="fs-6 text-uppercase fw-bolder mb-0">{{ stat.name }}</p>
               <p class="fs-1 text-uppercase fw-bolder mb-0">{{ stat.value }}</p>
