--- a/_layouts/player.html
+++ b/_layouts/player.html
@@ -12,8 +12,8 @@ header: header-player
           <tbody>
             {% for item in page.details %}
             <tr class="row g-2 px-1">
-              <td class="col-5 text-uppercase fw-bolder ps-0">{{ item.name }}</td>
-              <td class="col-7 text-capitalize">{{ item.value }}</td>
+              <td class="col-5 text-capitalize text-secondary ps-0">{{ item.name }}</td>
+              <td class="col-7 text-uppercase">{{ item.value }}</td>
             </tr>
             {% endfor %}
           </tbody>
