--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
         <a href="{{ '/contact' | relative_url }}" alt="" class="nav-item nav link-secondary text-decoration-none fw-bolder">Contact</a>
         <a href="{{ '/assets' | relative_url }}" alt="" class="nav-item nav link-secondary text-decoration-none fw-bolder">Assets</a>
         <a href="{{ '/partner' | relative_url }}" alt="" class="nav-item nav link-secondary text-decoration-none fw-bolder">Partner</a>
-        <a href="{{ '/faq' | relative_url }}" alt="" class="nav-item nav link-secondary text-decoration-none fw-bolder">FAQ</a>
+        <!--<a href="{{ '/faq' | relative_url }}" alt="" class="nav-item nav link-secondary text-decoration-none fw-bolder">FAQ</a>-->
       </nav>
     </div>
   </div>
